--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import './app/core/ui/styles/variables';
+
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  background-color: $yale-blue;
+  font-family: 'Roboto', sans-serif;
+}
